--- a/front/src/components/navbar.css
+++ b/front/src/components/navbar.css
@@ -1,17 +1,33 @@
-.navbar
-{
-    background-color: #1C2C54;
-    color: #F9F9F6;
-}
-
 
 @theme{
     --color-bone-white: #F9F9F6;
     --color-regal-blue: #1C2C54;
     --color-light-gold: #C9A66B;
 }
+.navbar
+{
+    background-color: var(--color-regal-blue);
+    color: var(--color-bone-white);
+}
+.navbar2
+{
+    background-color: #2c437d;
+    color: var(--color-bone-white);
+}
 
-.navLink
+.navbar2 ul li{
+    padding-top: 8px;
+    padding-bottom: 4px;
+    padding-inline: 4px;
+}
+
+
+.navbar2 ul li:hover{
+    background-color: #3d589b;
+}
+
+
+.navLink, .navLink2
 {
     color: #F9F9F6;
 }
@@ -20,10 +36,17 @@
     color: #C9A66B;
 }
 
-.navLink:focus
+.navLink:active, .navLink:focus{
+    color: #C9A66B;
+}
+
+.navLink:focus, .navLink2:active, .navLink2:focus
 {
     font-weight: var(--font-weight-bold);
 }
+
+
+
 
 .navLink:focus .accountOptions
 {
